<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_plant_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_plant_list" />

        <item
            android:id="@+id/nav_notification_center"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_notification_center"
            app:actionLayout="@layout/menu_item_with_badge" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>
</menu>